# ChangeLog for dev-db/libdrizzle
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libdrizzle/Attic/ChangeLog,v 1.5 2010/04/19 06:04:39 robbat2 Exp $

  19 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> libdrizzle-0.8.ebuild:
  Missed a commit from my laptop.

*libdrizzle-0.8 (19 Mar 2010)

  19 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +libdrizzle-0.8.ebuild:
  Version bump.

*libdrizzle-0.7 (13 Jan 2010)

  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +libdrizzle-0.7.ebuild:
  Version bump.

  23 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  libdrizzle-0.6.ebuild:
  Disable static libraries by default and remove .la files.

*libdrizzle-0.6 (20 Dec 2009)

  20 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libdrizzle-0.6.ebuild, +metadata.xml:
  Initial import, thanks again to Pavel Stratil. New dependency for
  gearmand[drizzle].
