@@ -1,6 +1,13 @@
 # ChangeLog for dev-db/libdrizzle
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdrizzle/Attic/ChangeLog,v 1.5 2010/04/19 06:04:39 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdrizzle/Attic/ChangeLog,v 1.6 2010/05/12 10:04:51 flameeyes Exp $
+
+*libdrizzle-0.8-r1 (12 May 2010)
+
+  12 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  -libdrizzle-0.6.ebuild, -libdrizzle-0.7.ebuild, -libdrizzle-0.8.ebuild,
+  +libdrizzle-0.8-r1.ebuild:
+  Fix error in sqlite USE flag; cleanup old versions.
 
   19 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> libdrizzle-0.8.ebuild:
   Missed a commit from my laptop.
